[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "streamlit>=1.44.1",
    "tensorflow>=2.14.0",
]
